--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
@@ -25,6 +32,22 @@
             <li><a href="#">Sign up</a></li>
         </ul>
       </header>
+      <main>
+        <div class="main-text">
+          <h1>Own your calm space <br> in your <span>head</span> and <span>body</span></h1>
+          <p>Get a fit and healthy body at the comfort of <br> your home</p>
+          <a class="know-button" href="#">KNOW MORE</a>
+        </div>
+        <div class="main-img">
+          <img class="main-img-yoga" src="./img/yoga-img.png" alt="Logo-image">
+        </div>
+      </main>
     </div>
+    <footer>
+      <p class="footer-text">Made by Misha</p>
+     <h2>
+      dsghkjlk
+     </h2>
+    </footer>
   </body>
 </html>
