--- a/index.html
+++ b/index.html
@@ -24,30 +24,39 @@
           <a class="logo" href="#"> <img src="./img/logo.png" alt="Logo" /></a>
           <a class="brand-name" href="#">Bellefit</a>
         </div>
-        <ul>
+        <ul class="menu-list">
             <li><a href="#">Live</a></li>
             <li><a href="#">Plans</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Log in</a></li>
             <li><a href="#">Sign up</a></li>
         </ul>
+        <div class="burger">
+
+        </div>
       </header>
       <main>
         <div class="main-text">
-          <h1>Own your calm space <br> in your <span>head</span> and <span>body</span></h1>
-          <p>Get a fit and healthy body at the comfort of <br> your home</p>
+          <h1>Own your calm space in your <span>head</span> and <span>body</span></h1>
+          <p class="main-paragraf">Get a fit and healthy body at the comfort of your home</p>
           <a class="know-button" href="#">KNOW MORE</a>
         </div>
         <div class="main-img">
           <img class="main-img-yoga" src="./img/yoga-img.png" alt="Logo-image">
+          <div class="small-img">
+            <img src="./img/small.png" alt="Small image" class="small-img-img">
+          </div>
+          <div class="sub-text">
+            <h3 class="text-small">Fastest way 
+              to organize</h3>
+              <p class="text-small-small">Slate helps you see how many 
+                more days you need to work 
+                to reach your financial goal 
+                for the month and year.</p>
+          </div>
         </div>
       </main>
+
     </div>
-    <footer>
-      <p class="footer-text">Made by Misha</p>
-     <h2>
-      dsghkjlk
-     </h2>
-    </footer>
   </body>
 </html>
